--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 add_library(
-        pente_lib SHARED
+        pente_lib STATIC
         SerialFile.cpp SerialFile.h)
 
 target_include_directories(pente_lib
