Test and implement getting scores and captured pairs from serial
Use string to initialize the Series class instead of a file, because the executable is built in a different folder from the test directory.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 add_library(
         pente_lib STATIC
-        SerialFile.cpp SerialFile.h)
+        Serial.cpp Serial.h)
 
 target_include_directories(pente_lib
         INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
