Test and implement get_row method

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -23,6 +23,7 @@ add_executable(
         tests
         FrameworkTests.cpp
         SerialTests.cpp
+        BoardTests.cpp
 )
 
 target_link_libraries(
