Test and implement getting available moves
Enable creating custom size boards from string; it was done in this commit to enable testing for getting positions with a smaller board
Add methods to get distance between two points

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -25,6 +25,7 @@ add_executable(
         SerialTests.cpp
         BoardTests.cpp
         RosterTests.cpp
+        PositionTest.cpp
 )
 
 target_link_libraries(
