--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,14 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+include(FetchContent)
+
+FetchContent_Declare(fmt
+        GIT_REPOSITORY https://github.com/fmtlib/fmt.git
+        GIT_TAG master
+)
+FetchContent_MakeAvailable(fmt)
+
 add_library(
         pente_lib STATIC
         Serial.cpp Serial.h
@@ -15,6 +23,10 @@ add_library(
         Human.cpp Human.h
         Computer.cpp Computer.h
         Exceptions.h
+)
+
+target_link_libraries(pente_lib
+        PUBLIC fmt::fmt
 )
 
 
