Add helper function to select random element from a container

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,6 +34,7 @@ add_library(
         Tournament.cpp Tournament.h
         Round.cpp Round.h
         TournamentAnnouncement.cpp TournamentAnnouncement.h
+        helpers.cpp helpers.h
 )
 
 target_link_libraries(pente_lib
