Test and implement is_opponent_winning_move
Experimental Board needed because Board validates move and places only
the right stone
ExperimentalBoard places stone even if invalid to check

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -38,6 +38,7 @@ add_library(
         RoundDisplay.cpp RoundDisplay.h
         UnicodeDisplayHelpers.cpp UnicodeDisplayHelpers.h
         Strategy.cpp Strategy.h
+        ExperimentalBoard.h
 )
 
 target_link_libraries(pente_lib
